<resources>
    <string name="app_name"> movieApp</string>
    <string name="start_activity_menu_privacy">PRIVACY</string>
    <string name="start_activity_menu_help">HELP</string>
    <string name="start_activity_menu_sign_in">SIGN IN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="watch_count">828.001</string>
    <string name="review">6.2k Review</string>
    <string name="movie_description">In a dystopian future, society has collapsed, leaving a barren wasteland. A group of survivors embarks on a perilous journey across the desolate landscape in search of a rumored safe haven. As they traverse through dangerous territories, facing both natural threats and hostile factions, tensions rise within the group, testing their loyalties and convictions. Along the way, they encounter unexpected allies and adversaries, forcing them to confront the harsh realities of their world and make difficult choices that will determine their fate.</string>
    <string name="play_movie">Play Movie</string>
    <string name="sign_up_to_start_your_membership">Sign up to start your membership</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="get_special_offers">Get special offers</string>
    <string name="_continue">Continue</string>
    <string name="set_up_your_payment">Set Up your Payment</string>
    <string name="your_membership_start_as_soon_as_you_set_up_payment">Your membership start as soon as you set up payment.</string>
    <string name="no_commitments_cancel_online_at_anytime">No commitments. Cancel online at anytime</string>
    <string name="credit_or_debit_card">Credit or Debit card</string>
    <string name="paypal">paypal</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="setup_your_credit_or_debt_card">Setup your credit or debt card</string>
    <string name="expiration_date_mm_yy">Expiration Date(MM/YY)</string>
    <string name="security_code_cvv">Security Code(cvv)</string>
    <string name="privacy">By checking the checkbox below you agree to our Terms of use, Privacy Statement, and and that you are over 18, MOVIE SHOW will automatically continue your membership and charge the monthly membership fee to your payment method until you cancel. You may cancel at any time to avoid future charges.</string>
    <string name="i_agree">I agree</string>
    <string name="start_membership">Start Membership</string>
    <string name="setup_your_paypal">Setup your Paypal</string>
    <string name="standard">Standard</string>
    <string name="usd4_99">USD4.99</string>
    <string name="change">Change</string>
    <string name="finish_sign_up">To finish signup, click Continue To Paypal button and login to Paypal using your email and password.</string>
    <string name="continue_to_paypal">Continue To Paypal</string>
    <string name="login">Login</string>
    <string name="need_help">Need Help?</string>
    <string name="new_to_moviesshow_sign_up_now">New to MoviesShow?Sign up now</string>
    <string name="bot_info">Sign in is protected by google reCAPTCHA to ensure you are not a bot.Learn more</string>
    <string name="choose_your_plan">Choose your plan</string>
    <string name="no_commitments_cancel_anytime">No commitments,cancel anytime.</string>
    <string name="everything_for_one_low_price">Everything for one low price</string>
    <string name="unlimited_viewing_on_all_your_devices">Unlimited viewing on all your devices</string>
    <string name="see_the_plans">See the plans</string>
    <string name="premium">Premium</string>
    <string name="jo7_99_month">JO7.99/month</string>
    <string name="line">________________________________________</string>
    <string name="select">Select</string>
    <string name="downgrade_or_upgrade_at_any_time">Downgrade or upgrade at any time.</string>
    <string name="desc_plans">HD and Ultra HD availability subjevt to your internet service and device capabilities. Not all content available n HD or Ultra HD. See Terms of use for more details</string>
    <string name="congratulation_you_are_getting_an_upgrade">CONGRATULATION You are Getting An Upgrade</string>
    <string name="ok_thanks">Ok Thanks</string>
    <string name="_30_days">30 days</string>
    <string name="watch_on_any_device">WATCH ON ANY DEVICE</string>
    <string name="stream_on_your_phone">Stream on your phone,tablet,laptop and TV without paying more</string>
    <string name="emp">test</string>
    <string name="no_pesky_contract">NO PESKY CONTRACT</string>
    <string name="join_today_cancel_any_time">Join today,cancel any time</string>
    <string name="stream_and_download_as_much_as_you_want_no_extra_fees">Stream and download as much as you want,no extra fees</string>
    <string name="unlimted_entertainment_one_low_price">UNLIMTED ENTERTAINMENT,ONE LOW PRICE</string>
    <string name="get_started">GET STARTED</string>
    <string name="step_1_of_3">Step 1 of 3</string>
    <string name="step_2_of_3">Step 2 of 3</string>
    <string name="step_3_of_3">Step 3 of 3</string>
</resources>