<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".uilayer.fragments.signupfragment.SignUpFragment"
        android:orientation="vertical"
        android:background="@color/signup_fragment_background">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_2_of_3"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:textStyle="bold"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_to_start_your_membership"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:hint="@string/username_hint"
            app:hintAnimationEnabled="true"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/btn_continue_color"


            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:inputType="text"
                android:textAlignment="textStart"
                android:textSize="15sp"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:hint="@string/password_hint"
            app:hintAnimationEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/pass_toggle"
            app:passwordToggleTint="@color/white"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/btn_continue_color"


           >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:textAlignment="textStart"
                android:textSize="15sp"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_special_offers"
            android:layout_marginTop="3dp"
            android:textColor="@color/white"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/_continue"
            android:backgroundTint="@color/btn_continue_color"
            app:cornerRadius="0dp"
            android:layout_marginTop="125dp"
            android:layout_gravity="center"
            android:clickable="true"
            />

    </LinearLayout>
</layout>