<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/signup_fragment_background"
        android:orientation="vertical"
        tools:context=".uilayer.fragments.thirdinitialfragment.ThirdInitialFragment">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginBottom="731dp"
            android:clickable="true"
            android:contentDescription="@string/emp"
            android:elevation="20dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView_Image3"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/unlimted_entertainment_one_low_price"
            android:textColor="#41FF23"
            android:textSize="18sp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/stream_and_download_as_much_as_you_want_no_extra_fees"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</layout>